Developed quiz layoyut with css, still wip

--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 
 <body>
 
-<div id="scoreboard"></div>
+<h3 id="scoreboard">Scoreboard</h3>
 
 <div id="quizarea">
 
     <h1 id="quizstatement">Quiz Question</h1>
-    <button id="option1" data-selected="false">test</button>
-    <button id="option2" data-selected="false">test</button>
-    <button id="option3" data-selected="false">test</button>
-    <button id="option4" data-selected="false">test</button>
+    <div id="quizanswers">
+        <button id="option1" data-selected="false">test</button>
+        <button id="option2" data-selected="false">test</button>
+        <button id="option3" data-selected="false">test</button>
+        <button id="option4" data-selected="false">test</button>
+    </div>
 
 </div>
 
-<div id="timer"></div>
+<h3 id="timer">Timer</h3>
 
 
 
