--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 
 <body>
 
-<h3 id="scoreboard" class="sidebar">Scoreboard</h3>
+<h3 id="scoreboard" class="sidebar"><a href="pages/scoreboard.html">Scoreboard</a></h3>
 
 <div id="quizarea">
 
     <h1 id="quizstatement">Quiz Question - If you had twenty woodpeckers in a box, would the wood peckers peck through the wood box?</h1>
     <div id="quizanswers">
-        <button id="option1" data-selected="false">test - They could if they really wanted to.</button>
-        <button id="option2" data-selected="false">test - They probably would not, because they are not that smart.</button>
-        <button id="option3" data-selected="false">test - Yes they would, because the box is wood.</button>
-        <button id="option4" data-selected="false">test - How did you get twenty wood peckers in a box?</button>
+        <button id="option1" data-selected="false">They could if they really wanted to.</button>
+        <button id="option2" data-selected="false">They probably would not, because they are not that smart.</button>
+        <button id="option3" data-selected="false">Yes they would, because the box is wood.</button>
+        <button id="option4" data-selected="false">How did you get twenty wood peckers in a box?</button>
+        <h4 id="answer-result">WRONG! Minus 15 point!</h4>
     </div>
 
 </div>
 
-<h3 id="timer" class="sidebar">Timer</h3>
+<h3 id="timer" class="sidebar">Time: 99</h3>
 
 
 
