Created quiz starting screen

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
 <h3 id="scoreboard" class="sidebar"><a href="pages/scoreboard.html">Scoreboard</a></h3>
 
+<div id="quizstart">
+
+    <h1>Welcome to the Coding Quiz!</h1>
+    <p>
+    During the quiz you will have 99 seconds to answer 10 questions. <br>
+    Every question you answer wrong will reduce the timer by 15 seconds! <br>
+    Complete the quiz within the limit and submit your remaining time as score. <br>
+    Are you Ready to Play?
+    </p>
+
+    <button>Start the Quiz!</button>
+
+</div>
+
 <div id="quizarea">
 
     <h1 id="quizstatement">Quiz Question - If you had twenty woodpeckers in a box, would the wood peckers peck through the wood box?</h1>
