Clicking start button now starts random question selection for the quiz - also added commentation and cleaned up code a bit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     Are you Ready to Play?
     </p>
 
-    <button>Start the Quiz!</button>
+    <button id="beginquiz">Start the Quiz!</button>
 
 </div>
 
@@ -34,7 +34,7 @@
         <button id="option2" data-selected="false">They probably would not, because they are not that smart.</button>
         <button id="option3" data-selected="false">Yes they would, because the box is wood.</button>
         <button id="option4" data-selected="false">How did you get twenty wood peckers in a box?</button>
-        <h4 id="answer-result">WRONG! Minus 15 point!</h4>
+        <h4 id="answer-result"></h4>
     </div>
 
 </div>
