Added game over screen for when time runs out

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <div id="quizstart">
 
-    <h1>Welcome to the Coding Quiz!</h1>
-    <p>
+    <h1 id="startEndMessage">Welcome to the Coding Quiz!</h1>
+    <p id="startEndDetail">
     During the quiz you will have 99 seconds to answer 10 questions. <br>
     Every question you answer wrong will reduce the timer by 15 seconds! <br>
     Complete the quiz within the limit and submit your remaining time as score. <br>
