Created submission screen once quiz answers have been answered correctly

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     Are you Ready to Play?
     </p>
 
+    <form id="submissionMenu">
+        <input id="yourInitials" type="text">
+        <button id="submitScore">Submit Score</button>
+    </form>
+
     <button id="beginquiz">Start the Quiz!</button>
 
 </div>
