Submitting score will now hide submission menu and display message stating the submission was received

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <h1 id="startEndMessage">Welcome to the Coding Quiz!</h1>
     <p id="startEndDetail">
-    During the quiz you will have 99 seconds to answer 10 questions. <br>
-    Every question you answer wrong will reduce the timer by 15 seconds! <br>
-    Complete the quiz within the limit and submit your remaining time as score. <br>
-    Are you Ready to Play?
+        During the quiz you will have 99 seconds to answer 10 questions. <br>
+        Every question you answer wrong will reduce the timer by 15 seconds! <br>
+        Complete the quiz within the limit and submit your remaining time as score. <br>
+        Are you Ready to Play?
     </p>
 
     <form id="submissionMenu">
-        <input id="yourInitials" type="text">
+        <input id="yourInitials" type="text" maxlength="3" />
         <button id="submitScore">Submit Score</button>
     </form>
 
