--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
 
     <h1 id="quizstatement">Quiz Question - If you had twenty woodpeckers in a box, would the wood peckers peck through the wood box?</h1>
     <div id="quizanswers">
-        <button id="option1" data-selected="false">They could if they really wanted to.</button>
-        <button id="option2" data-selected="false">They probably would not, because they are not that smart.</button>
-        <button id="option3" data-selected="false">Yes they would, because the box is wood.</button>
-        <button id="option4" data-selected="false">How did you get twenty wood peckers in a box?</button>
-        <h4 id="answer-result"></h4>
+        <button id="option1" class="answerbutton" data-selected="false">They could if they really wanted to.</button>
+        <button id="option2" class="answerbutton" data-selected="false">They probably would not, because they are not that smart.</button>
+        <button id="option3" class="answerbutton" data-selected="false">Yes they would, because the box is wood.</button>
+        <button id="option4" class="answerbutton" data-selected="false">How did you get twenty wood peckers in a box?</button>
     </div>
+    
+    <h4 id="answer-result"></h4>
 
 </div>
 
