Started working on scoreboard css layout

--- a/pages/scoreboard.html
+++ b/pages/scoreboard.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <title>Quiz Scoreboard</title>
 </head>
-<body>
-    
-<img src="../assets/imgs/whereisthescoreboard.gif" alt="Where is it">
-<h2>tis not finished yet - return to whence you came!</h2>
-<h3><a href="../index.html">BEGONE!</a></h3>
 
+<body id="scoreBoardPage">
+
+<div id="scoreBoard">
+
+    <h3 id="scoreBoardTitle">SCOREBOARD</h3>
+    
+<h4 class="scoreBoardItem">Examplescore : 56</h4>
+
+</div>
+
+<script src="../assets/js/script.js"></script>
 </body>
 </html>
