Created inital css layout for scoreboard page - now need to add functionality where elements are added when score is submitted

--- a/pages/scoreboard.html
+++ b/pages/scoreboard.html
@@ -10,6 +10,8 @@
 
 <body id="scoreBoardPage">
 
+    <h2 id="returnToIndex"><a href="../index.html">Return to Quiz</a></h2>
+
 <div id="scoreBoard">
 
     <h3 id="scoreBoardTitle">SCOREBOARD</h3>
