Made additional changes to css layout for better javascript functionality on scoreboard

--- a/pages/scoreboard.html
+++ b/pages/scoreboard.html
@@ -14,9 +14,10 @@
 
 <div id="scoreBoard">
 
-    <h3 id="scoreBoardTitle">SCOREBOARD</h3>
-    
-<h4 class="scoreBoardItem">Examplescore : 56</h4>
+    <h3 id="scoreBoardTitle">SCORE BOARD</h3>
+    <ul id="scoreContainer">
+        <li class="scoreBoardItem">Examplescore : 56</li>
+    </ul>
 
 </div>
 
