Condensed scoreboard page into quiz page due to java interaction complications - scoreboard can be displayed on the same page as the quiz by clicking the appropriate button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h3 id="scoreboard" class="sidebar"><a href="pages/scoreboard.html">Scoreboard</a></h3>
+<h3 id="scoreBoardButton" class="sidebar">Scoreboard</h3>
 
 <div id="quizstart">
 
@@ -42,6 +42,19 @@
     </div>
     
     <h4 id="answer-result"></h4>
+
+</div>
+
+<div id="scoreBoardPage">
+
+    <h2 id="returnToIndex"><a href="../index.html">Return to Quiz</a></h2>
+
+    <div id="scoreBoard">
+
+        <h3 id="scoreBoardTitle">SCORE BOARD</h3>
+        <ul id="scoreContainer"></ul>
+
+    </div>
 
 </div>
 
