--- a/pages/scoreboard.html
+++ b/pages/scoreboard.html
@@ -8,18 +8,20 @@
     <title>Quiz Scoreboard</title>
 </head>
 
-<body id="scoreBoardPage">
+<body>
 
-    <h2 id="returnToIndex"><a href="../index.html">Return to Quiz</a></h2>
+    <div id="scoreBoardPage">
 
-<div id="scoreBoard">
+        <h2 id="returnToIndex"><a href="../index.html">Return to Quiz</a></h2>
 
-    <h3 id="scoreBoardTitle">SCORE BOARD</h3>
-    <ul id="scoreContainer">
-        <li class="scoreBoardItem">Examplescore : 56</li>
-    </ul>
+        <div id="scoreBoard">
 
-</div>
+            <h3 id="scoreBoardTitle">SCORE BOARD</h3>
+            <ul id="scoreContainer"></ul>
+
+        </div>
+
+    </div>
 
 <script src="../assets/js/script.js"></script>
 </body>
