Added return button on score screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
 
-<h3 id="scoreBoardButton" class="sidebar">Scoreboard</h3>
+<div class="sidebar">
+    <h3><a id="scoreBoardButton">Scoreboard</a></h3>
+</div>
 
 <div id="quizstart">
 
@@ -47,7 +49,7 @@
 
 <div id="scoreBoardPage">
 
-    <h2 id="returnToIndex"><a href="../index.html">Return to Quiz</a></h2>
+    <h2><a id="returnToQuiz">Return to Quiz</a></h2>
 
     <div id="scoreBoard">
 
@@ -55,6 +57,8 @@
         <ul id="scoreContainer"></ul>
 
     </div>
+
+    <h2 id="clearScores">Clear Your Scores</h2>
 
 </div>
 
