Added in-depth commentation to JS and HTML pages

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    
+
+<!-- SCOREBOARD BUTTON - This is the button that renders the scoreboard -->
+
 <div class="sidebar">
     <h3><a id="scoreBoardButton">Scoreboard</a></h3>
 </div>
+
+<!-- START/END - This is where the quiz start and end info appears -->
 
 <div id="quizstart">
 
@@ -33,6 +37,8 @@
 
 </div>
 
+<!-- QUIZ AREA - This is where the questions are asked -->
+
 <div id="quizarea">
 
     <h1 id="quizstatement">Quiz Question - If you had twenty woodpeckers in a box, would the wood peckers peck through the wood box?</h1>
@@ -46,6 +52,8 @@
     <h4 id="answer-result"></h4>
 
 </div>
+
+<!-- SCOREBOARD - This is the scoreboard -->
 
 <div id="scoreBoardPage">
 
@@ -61,6 +69,8 @@
     <h2 id="clearScores">Clear Your Scores</h2>
 
 </div>
+
+<!-- TIMER - This is the timer -->
 
 <h3 class="sidebar"><div id="timer">Time: 99</div></h3>
 
